# ollama03-kimi-k2.5

./: AGENTS.md  API_SPECIFICATION.md  AUTHENTICATION_FLOW.md  BACKEND_ARCHITECTURE.md  CLAUDE.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  FRONTEND_ARCHITECTURE.md  PLAN.md  README-fronted.md  README.md  SESSION.md  TESTING_STRATEGY.md  dev-start.sh  docker-compose.dev.yml
backend/: .dockerignore  .env.example  .env.local  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  permissions.py  roles.py  users.py
backend/app/application/services/: __init__.py  audit_service.py  auth_service.py  permission_service.py  role_service.py  user_service.py
backend/app/core/: __init__.py  auth.py  exceptions.py  jwt.py  lockout.py  logging.py  permissions.py  rate_limit.py  rbac.py  security.py
backend/app/domain/models/: __init__.py  associations.py  audit.py  permission.py  role.py  user.py
backend/app/infrastructure/database/: base.py  session.py
backend/app/schemas/: __init__.py  auth.py  base.py  common.py  permission.py  role.py  user.py
backend/docs/: API.md  LOCAL_DEVELOPMENT.md
backend/scripts/: entrypoint.sh  init-db.sql  init_db.py  seed-data.sql
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_auth.py  test_models.py  test_permissions.py  test_services.py
